# zephyr_nix

./: .gitignore  CMakeLists.txt  README.md  flake.nix  prj.conf  west.yml
src/: main.c
